=== 0.2.4 - 12.11.2009

* Revert nested validation errors patch

* Убран патч для вложенных сообщений валидации (не работал с Rails 2.3.3 и ниже)

=== 0.2.3 - 9.11.2009

* Improve ActiveRecord translations [Dmitri Koulikoff]
* Fix nested validation errors with custom error message hack for Rails < 2.3.4 [valodzka]
* Added almost_x_years datetime translation

* Улучшен перевод ActiveRecord [Dmitri Koulikoff]
* Исправлена ошибка, возникающая при вложенных сообщениях валидации при использовании хака для Rails < 2.3.4 [valodzka]
* Добавлен перевод для ключа даты/времени almost_x_years

=== 0.2.2 - 17.09.2009

* Fix ^-prefixed error messages handling on Rails 2.3.4

* Для Rails 2.3.4 исправлена работа сообщений валидаций, начинающихся с "^"

=== 0.2.1 - 5.09.2009

* Rails 2.3.4 compat (ActiveRecord::Error) and deprecation warning (use errors.full_messages.format from now on) [Alexander Semyonov/Yaroslav Markin]
* Added a couple of missing translations from Rails 2.3.4
* transliteration: Ы now transforms to Y [Alex Fortuna]

* Совместимость с Rails 2.3.4 (ActiveRecord::Error) и устаревшее форматирование через "^" (теперь надо использовать errors.full_messages.format) [Alexander Semyonov/Yaroslav Markin]
* Добавлена пара недостающих переводов из Rails 2.3.4
* транслитерация: Ы теперь превращается в Y [Alex Fortuna]

=== 0.2.0 - 16.03.2009

* number_to_human_size() translations: using edge format (Rails 2.3)
* i18n gem updated (0.1.3)
* Rails 2.3 compat

* Перевод для number_to_human_size(): испольуется форматирование из edge (Rails 2.3)
* Обновлен gem i18n до версии 0.1.3
* Совместимость с Rails 2.3

=== 0.1.3 - 27.12.2008

* Add support.array.words_connector/two_words_connector/last_word_connector (Array#to_sentence) (Rails Edge)
* Add datetime.prompts translations (Rails Edge)

* Добавлены переводы для Array#to_sentence (Rails Edge)
* Добавлены переводы для datetime.prompts (Rails Edge)

=== 0.1.2 - 4.11.2008
